--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+@layer base {
+    body {
+      font-family: Futura, serif, system-ui, sans-serif;
+      background-color: whitesmoke;
+      color: #1d1d1f;
+    }   
+  }
