--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,14 @@
 
 @layer base {
     body {
-      font-family: Futura, serif, system-ui, sans-serif;
-      background-color: whitesmoke;
-      color: #1d1d1f;
-    }   
-  }
+      width: 360px;
+      border: 0px solid #ffffff;
+      font-family: Roboto, sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+      background-color: #6B717E;
+      background-color: rgb(39, 36, 36);
+      background-color: rgb(57, 58, 65);
+      color: rgb(228, 234, 238);;
+    } 
+}
+
+
